# VoicePilot

./: .gitignore  .graphify_uncached.txt  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.codex/: README.md  config.toml
.codex/agents/: be-developer.toml  bsa.toml  data-engineer.toml  data-provisioning-eng.toml  fe-developer.toml  qas.toml  rte.toml  security-engineer.toml  (+3 more)
.sandcastle/: .env.example  Dockerfile  main.ts  prompt.md  tsconfig.json
config/: defaults.toml  schema.sql
docs/: CONTEXT.md  architecture.md  development.md
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunks.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
inference/: pyproject.toml  requirements.txt
inference/src/voicepilot_inference/: ipc_server.py  main.py
inference/src/voicepilot_inference/core/: pipeline.py  state.py
inference/src/voicepilot_inference/engines/: llm_client.py  ollama_client.py
inference/src/voicepilot_inference/prompts/: engineering.py
scripts/: build.sh  dev-setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: config.rs  error.rs  ipc.rs  mod.rs  ollama.rs  transcript.rs
src-tauri/src/services/: audio_service.rs  config_service.rs  hotkey_service.rs  ipc_client.rs  mod.rs  ollama_service.rs  tray_manager.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: paths.rs
(+26 files in other folders)
