[project]
name = "voicepilot-inference"
version = "0.1.0"
description = "VoicePilot local inference service"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
  "structlog>=24.2",
  "numpy>=1.26"
]

[project.optional-dependencies]
ml = ["torch", "torchaudio", "transformers", "onnxruntime", "silero-vad", "huggingface-hub"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
