[package]
name = "voicepilot"
version = "0.1.0"
edition = "2021"

[lib]
name = "voicepilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
cpal = "0.15"
rdev = "0.5"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
